@@ -1,3 +1,7 @@
+2004-11-03  Lutz Mueller <lutz@users.sourceforge.net>
+
+	* libexif/exif-format.c: More translatable strings.
+
 2004-11-02  Lutz Mueller <lutz@users.sourceforge.net>
 
 	* libexif/exif-entry.c (exif_entry_fix): Detect more wrong stuff.
